client/main.css
.menu-autohide > td >.rowOptions {
    opacity:0;
    filter:alpha(opacity=0);
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

.menu-autohide:hover > td > .rowOptions {
    opacity:1.0;
    filter:alpha(opacity=100);
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

.editForm {
    padding: 10px;
    background-color: #B7C7E8;
}

.well-sm {
    background-color: #6A7487;
}

.table .nestedTbl {
    margin-bottom: 0;
    background-color: inherit;
}

.table .nestedTbl td {
    border-top: none;
}

.table > tbody > tr:hover {
    background-color: #E6E6FA;
}

.nestedTbl > tbody > tr:hover {
    background-color: #CFCFE1;
}

#editingRow {
    border: 5px solid #6A7487;
    background-color: #E6E6FA;
}

.hiddenRow {
    color: gray;
    background-color: #eee;
}


/*
 * Twitter typeahead.js
 */
.twitter-typeahead {
    display: block!important;
}

.tt-query {
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-dropdown-menu {
    width: 100%;
    margin-top: 12px;
    padding: 8px 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border-radius: 8px;
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

.tt-suggestion p {
    margin: 0;
    padding-left: 10px;
}

.tt-suggestion:hover {
    background-color: #E6E6FA;
    cursor: pointer;
}

/*
 * User list setting
 */
 .userListItem {
    line-height: 1.75;
}

.userListItem > a {
    display: none;
}

.userListItem:hover > a {
    display: inline;
}

